# aa-notify

./: Makefile  README.md  aa-notify.spec  pyproject.toml
aa_notify/: __main__.py  main.py
