[tool.poetry]
name = "aa-notify"
version = "0.1.0"
description = "Screentime notifications using ActivityWatch"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://activitywatch.net/"
repository = "https://github.com/ActivityWatch/aa-notify/"
packages = [{include = "aa_notify"}]

[tool.poetry.scripts]
aa-notify = "aa_notify.main:main"

[tool.poetry.dependencies]
python = "^3.9"
desktop-notifier = "^3.4.2"
rubicon-objc = { version = "^0.4.0", platform = "darwin" }

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
pyinstaller = { version = "^6.6", python = "^3.9,<3.14" }
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
